crate 6 file and 1 floder &  edit 6 flie CSS

--- a/test05.html
+++ b/test05.html
@@ -13,7 +13,7 @@
 </head>
 <body>
         <h1>Welcome To Yuwadee Graden</h1>
-        <Strong >Select แบบที่ 1 : Universe Selector</Strong>
+        <Strong >Selector แบบที่ 1 : Universe Selector</Strong>
         <hr>
         <h3>Hi...</h3>
         <p>
