--- a/test07.html
+++ b/test07.html
@@ -15,7 +15,7 @@
 </head>
 <body>
         <h1>Welcome To Yuwadee Graden</h1>
-        <Strong >Select แบบที่ 3 : ID Selector</Strong>
+        <Strong >Selector แบบที่ 3 : ID Selector</Strong>
         <hr>
         <h3>Hi...</h3>
         <p>
