--- a/test08.html
+++ b/test08.html
@@ -17,7 +17,7 @@
 </head>
 <body>
         <h1 class="cen1 line1">Welcome To Yuwadee Graden</h1>
-        <Strong >Select แบบที่ 4 : Class Selector</Strong>
+        <Strong >Selector แบบที่ 4 : Class Selector</Strong>
         <hr>
         <h3>Hi...</h3>
         <p>
