--- a/test10.html
+++ b/test10.html
@@ -14,7 +14,7 @@
 </head>
 <body>
         <h1 >Welcome To Yuwadee Graden</h1>
-        <Strong >Select แบบที่ 6 : Union/Group Selector</Strong>
+        <Strong >Selector แบบที่ 6 : Union/Group Selector</Strong>
         <!-- คือการเอา Selector ในทุกแบบมาใช้ CSS เดียวกันโดยใข้ , คั่น -->
         <hr>
         <h3>Hi...</h3>
