--- a/test06.html
+++ b/test06.html
@@ -19,7 +19,7 @@
 </head>
 <body>
         <h1>Welcome To Yuwadee Graden</h1>
-        <Strong >Select แบบที่ 2 : Tag/Type/Element Selector</Strong>
+        <Strong >Selector แบบที่ 2 : Tag/Type/Element Selector</Strong>
         <hr>
         <h3>Hi...</h3>
         <p>
