--- a/test09.html
+++ b/test09.html
@@ -19,7 +19,7 @@
 </head>
 <body>
         <h1 class="cen1">Welcome To Yuwadee Graden</h1>
-        <Strong >Select แบบที่ 5 : Tag/Type/Element.Class Selector</Strong>
+        <Strong >Selector แบบที่ 5 : Tag/Type/Element.Class Selector</Strong>
         <hr>
         <h3>Hi...</h3>
         <p>
